--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,9 @@
   .text-balance {
     text-wrap: balance;
   }
+  .text-shadow {
+    text-shadow: 0 1px 4px rgb(0 0 0 / 0.4);
+  }
   .text-shadow-lg {
     text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   }
